<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".DestinationActivity">

    <include layout="@layout/toolbar_main"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/text_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_question"/>
    <Button
        android:id="@+id/btn_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ccoyahuacho"/>

    <Button
        android:id="@+id/btn_sr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/santarosa"/>

    <Button
        android:id="@+id/btn_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Libre"/>

</LinearLayout>